--- a/working/L01.ipynb
+++ b/working/L01.ipynb
@@ -5,7 +5,8 @@
    "id": "9eafe5aa-963c-441c-aa03-29dea438654b",
    "metadata": {},
    "source": [
-    "Q1: Machine precision\n"
+    "Q1: Machine precision\n",
+    "-"
    ]
   },
   {
@@ -40,7 +41,8 @@
    "metadata": {},
    "source": [
     "---------------------------------------\n",
-    "Q2: Iterations"
+    "Q2: Iterations\n",
+    "-"
    ]
   },
   {
@@ -106,7 +108,8 @@
    "metadata": {},
    "source": [
     "-------------------\n",
-    "Q4: Word Counts "
+    "Q4: Word Counts \n",
+    "-"
    ]
   },
   {
@@ -362,7 +365,8 @@
    "metadata": {},
    "source": [
     "--------------------------\n",
-    "Q5: Foxes and dogs"
+    "Q5: Foxes and dogs\n",
+    "-"
    ]
   },
   {
@@ -435,111 +439,16 @@
    "metadata": {},
    "source": [
     "--------------------------\n",
-    "Q11: Rock-Paper-Scissors"
+    "Q11: Rock-Paper-Scissors\n",
+    "-"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f42a8a38-e030-48df-970b-224249773216",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Choose rock, paper or scissors:  rock\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player: rock , Computer: scissors\n",
-      "Player wins\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to play again? (yes/no)  yes\n",
-      "Choose rock, paper or scissors:  paper\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player: paper , Computer: scissors\n",
-      "Computer wins\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to play again? (yes/no)  yes\n",
-      "Choose rock, paper or scissors:  paper\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player: paper , Computer: paper\n",
-      "It's a draw\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to play again? (yes/no)  yes\n",
-      "Choose rock, paper or scissors:  rock\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player: rock , Computer: rock\n",
-      "It's a draw\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to play again? (yes/no)  yes\n",
-      "Choose rock, paper or scissors:  rock\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player: rock , Computer: scissors\n",
-      "Player wins\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Do you want to play again? (yes/no)  no\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Final score:\n",
-      "Player wins with 2 points.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -559,7 +468,7 @@
     "        print(\"Computer wins\")\n",
     "        p2 += 1\n",
     "\n",
-    "    return p1, p2   # restituisce entrambi i punteggi\n",
+    "    return p1, p2   \n",
     "\n",
     "\n",
     "my_dict = {1: \"rock\", 2: \"paper\", 3: \"scissors\"}\n",
@@ -576,14 +485,12 @@
     "\n",
     "    print(\"Player:\", player_move, \", Computer:\", computer_move)\n",
     "\n",
-    "    # aggiorna i punteggi\n",
     "    player_points, computer_points = winner(\n",
     "        player_move, computer_move, player_points, computer_points\n",
     "    )\n",
     "\n",
     "    answer = input(\"Do you want to play again? (yes/no) \")\n",
     "\n",
-    "# fine del gioco\n",
     "print(\"\\nFinal score:\")\n",
     "if player_points > computer_points:\n",
     "    print(\"Player wins with\", player_points, \"points.\")\n",
