--- a/working/L02.ipynb
+++ b/working/L02.ipynb
@@ -17,7 +17,8 @@
    "id": "4a13869e-755f-4ca9-82bf-34f09ce701cd",
    "metadata": {},
    "source": [
-    "Q1: Fun with arrays"
+    "Q1: Fun with arrays\n",
+    "-"
    ]
   },
   {
@@ -83,7 +84,8 @@
    "metadata": {},
    "source": [
     "---------------\n",
-    "Q2: Histograms"
+    "Q2: Histograms\n",
+    "-"
    ]
   },
   {
@@ -131,7 +133,8 @@
    "metadata": {},
    "source": [
     "--------------\n",
-    "Q3: Are you faster than numpy? No"
+    "Q3: Are you faster than numpy? No\n",
+    "-"
    ]
   },
   {
