--- a/working/L03.ipynb
+++ b/working/L03.ipynb
@@ -17,7 +17,8 @@
    "id": "88e711eb-c464-48e3-b773-b4dea41f1ff6",
    "metadata": {},
    "source": [
-    "Q2: Planetary positions"
+    "Q2: Planetary positions\n",
+    "-"
    ]
   },
   {
@@ -58,7 +59,8 @@
    "metadata": {},
    "source": [
     "-----------------\n",
-    "Q3: A perfect circle"
+    "Q3: A perfect circle\n",
+    "-"
    ]
   },
   {
@@ -149,7 +151,8 @@
    "metadata": {},
    "source": [
     "--------------\n",
-    "Q6: frequent words plotting"
+    "Q6: frequent words plotting\n",
+    "-"
    ]
   },
   {
